--- a/jwt/src/main/resources/application.properties
+++ b/jwt/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+# DataSource configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/jwt_auth
+spring.datasource.username=postgres
+spring.datasource.password=root
 
+# Hibernate properties
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
