--- a/jwt/src/main/resources/application.properties
+++ b/jwt/src/main/resources/application.properties
@@ -5,3 +5,7 @@ spring.datasource.password=root
 
 # Hibernate properties
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.show-sql=true
+logging.level.org.hibernate.SQL=DEBUG
+
